show all btn created

--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
     <!-- Main section start -->
     <main class="container mx-auto">
       <section>
-        <div id="card-container" class="grid grid-cols-3 gap-6">
-          
+        <div id="card-container" class="grid grid-cols-3 gap-6"></div>
+        <div>
+          <button
+            id="show-all-btn"
+            class="px-4 py-2 bg-red-500 rounded-lg block mx-auto mt-4 text-lg font-bold text-white"
+          >
+            Show All
+          </button>
+        </div>
       </section>
     </main>
 
