--- a/index.html
+++ b/index.html
@@ -5,9 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@2.51.5/dist/full.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
+    <input type="checkbox" id="my-modal-3" class="modal-toggle" />
+    <div class="modal">
+      <div class="modal-box relative">
+        <label
+          for="my-modal-3"
+          class="btn btn-sm btn-circle absolute right-2 top-2"
+          >✕</label
+        >
+        <h3 class="text-lg font-bold">Congratulations random Internet user!</h3>
+        <p class="py-4">
+          You've been selected for a chance to get one year of subscription to
+          use Wikipedia for free!
+        </p>
+      </div>
+    </div>
     <header>
       <h1 class="text-center text-4xl">AI Universe Hub</h1>
     </header>
@@ -18,7 +39,7 @@
         <div>
           <button
             id="show-all-btn"
-            class="px-4 py-2 bg-red-500 rounded-lg block mx-auto mt-4 text-lg font-bold text-white"
+            class="hidden px-4 py-2 bg-red-500 rounded-lg mt-4 text-lg font-bold text-white"
           >
             Show All
           </button>
