modal content creating

--- a/index.html
+++ b/index.html
@@ -14,21 +14,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <input type="checkbox" id="my-modal-3" class="modal-toggle" />
-    <div class="modal">
-      <div class="modal-box relative">
-        <label
-          for="my-modal-3"
-          class="btn btn-sm btn-circle absolute right-2 top-2"
-          >✕</label
-        >
-        <h3 class="text-lg font-bold">Congratulations random Internet user!</h3>
-        <p class="py-4">
-          You've been selected for a chance to get one year of subscription to
-          use Wikipedia for free!
-        </p>
-      </div>
-    </div>
     <header>
       <h1 class="text-center text-4xl">AI Universe Hub</h1>
     </header>
@@ -43,6 +28,21 @@
           >
             Show All
           </button>
+        </div>
+      </section>
+
+      <!-- modal content section -->
+      <section>
+        <input type="checkbox" id="detail-modal" class="modal-toggle" />
+        <div class="modal w-screen">
+          <div class="modal-box relative">
+            <label
+              for="detail-modal"
+              class="btn btn-sm btn-circle absolute right-2 top-2"
+              >✕</label
+            >
+            <div id="modal-container" class="flex gap-4"></div>
+          </div>
         </div>
       </section>
     </main>
