--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       rel="stylesheet"
       type="text/css"
     />
-
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
@@ -34,8 +33,8 @@
       <!-- modal content section -->
       <section>
         <input type="checkbox" id="detail-modal" class="modal-toggle" />
-        <div class="modal w-screen">
-          <div class="modal-box relative">
+        <div class="modal">
+          <div class="bg-black w-3/4 h-3/4 relative p-10 rounded-lg">
             <label
               for="detail-modal"
               class="btn btn-sm btn-circle absolute right-2 top-2"
