--- a/index.html
+++ b/index.html
@@ -34,13 +34,18 @@
       <section>
         <input type="checkbox" id="detail-modal" class="modal-toggle" />
         <div class="modal">
-          <div class="bg-black w-3/4 h-3/4 relative p-10 rounded-lg">
+          <div
+            class="flex justify-center items-center bg-gray-700 w-3/4 h-3/4 relative p-10 rounded-lg"
+          >
             <label
               for="detail-modal"
               class="btn btn-sm btn-circle absolute right-2 top-2"
               >✕</label
             >
-            <div id="modal-container" class="flex gap-4"></div>
+            <div
+              id="modal-container"
+              class="flex gap-4 justify-center items-end"
+            ></div>
           </div>
         </div>
       </section>
