--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
           id="card-container"
           class="grid grid-cols-1 lg:grid-cols-3 md:grid-cols-2 gap-6"
         ></div>
-        <div>
+        <div class="flex justify-center items-center">
           <button
             id="show-all-btn"
-            class="hidden px-4 py-2 bg-red-500 rounded-lg mt-4 text-lg font-bold text-white"
+            class="px-4 py-2 bg-red-500 rounded-lg mt-4 text-lg font-bold text-white"
           >
             Show All
           </button>
